# hyde

./: .gitignore  README.md  pyproject.toml
.github/workflows/: codeql-analysis.yml
src/hyde/: __init__.py  config.py  errors.py  hyde.py  pages.py  paginator.py  server.py
src/hyde/scaffolding/: config.yml
src/hyde/scaffolding/content/: index.md  server-setup.md
src/hyde/scaffolding/content/posts/: first-post.md  server-setup.md
src/hyde/scaffolding/content/snippets/: wisdom.md
src/hyde/scaffolding/static/: style.css
src/hyde/scaffolding/static/css/: style.css  twocolumns.css
src/hyde/scaffolding/templates/: base.html.jinja2  home.html.jinja2  index.html.jinja2  navbar.html.jinja2  posts.html.jinja2  snippets.html.jinja2
tests/: test_hyde.py  test_hydepage.py  test_page.py  test_paginator.py  utils.py
