[tool.poetry]
name = "hyde"
version = "0.1.0"
description = ""
authors = ["Johannes Windelen <mail@johanneswindelen.com>"]

[tool.poetry.dependencies]
python = "^3.9"
PyYAML = "^5.4.1"
Markdown = "^3.3.4"
Jinja2 = "^2.11.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hyde = "hyde.hyde:cli"
